--- a/Custom Items.html
+++ b/Custom Items.html
@@ -455,6 +455,51 @@ Active “echo” hazards in burst: suppressed 1 round.`,
     "value": "25 gp (to the right buyer)",
     "usage": "Reference",
     "bulk": "L"
+  },
+  {
+    "name": "Heart of the Highcourt",
+    "type": "Artifact (Divination, Social)",
+    "level": 10,
+    "traits": ["Artifact", "Divination", "Magical", "Invested", "Uncommon"],
+    "effect": "💎 Court-Sense Reliquary\nHeld aloft, the Heart drinks in whispers of intent. While held and invested:\n• +2 item bonus to Diplomacy and Deception checks when interacting with nobles, courtiers, magistrates, or politicians.\n• You can Sense Motive against such targets in half the usual time.\n⚠️ Complication: Repeated coercive use (GM’s discretion) attracts attention from powerful factions who want the Heart claimed, sealed, or used.\n✨ Table Prompt: The gem subtly reflects the target’s dominant color-emotion (envy green, zeal crimson, etc.).",
+    "craftDC": 28,
+    "usage": "Held in 1 hand (invested)",
+    "bulk": "L",
+    "value": "Unknown — artifact; sale discouraged",
+    "lore": [
+      "Once beat within the throne-dais of the Highcourt; stolen during the Last Audience.",
+      "Courtiers swore it could taste ambition; several successions ‘mysteriously’ resolved after midnight audiences."
+    ]
+  },
+  {
+    "name": "Masquerade Sleep Draught",
+    "type": "Alchemical Poison (Ingested)",
+    "level": 5,
+    "traits": ["Alchemical", "Poison", "Ingested", "Uncommon"],
+    "effect": "🎭 Velvet Nightcap (Ingested)\nSave DC 18 Fortitude.\n• Success: The target becomes drowsy and sluggish for 10 minutes (GM: impose –1 status penalty to Perception and Will checks, or treat as ‘fatigued light’ condition per table norm).\n• Failure: Target falls unconscious for 1d6 hours. Only a specific runic reveille (or comparable magic: remove curse/neutralize poison at GM discretion) can awaken them early.\n• Critical Failure: As Failure, and the target suffers groggy disorientation (–1 status penalty to all checks) for 10 minutes after waking.\nNotes: Tasteless when masked by spiced wine.",
+    "craftDC": 20,
+    "value": "50 gp",
+    "usage": "1 dose (ingested)",
+    "bulk": "-",
+    "lore": [
+      "Favored at masked courts where duels are fought with goblets, not blades.",
+      "Recipes call for black poppy resin and moon-sifted sugar."
+    ]
+  },
+  {
+    "name": "Mind-Control Prism",
+    "type": "Wondrous Item (Enchantment, Mental)",
+    "level": 7,
+    "traits": ["Magical", "Enchantment", "Mental", "Invested", "Uncommon"],
+    "effect": "🔷 Hypnotic Command Beam (1 action)\nProject a scintillant ray at a creature within 30 ft. Will DC 21.\n• Failure: The target is controlled by you for up to 1 minute; it may attempt a new save at the end of each of its turns to end the effect.\n• Success: Shaken lucidity—no control, but the target is aware you attempted to sway them.\n• Critical Success: The prism backlashes; you are dazzled for 1 round.\nLimits: After a use (regardless of outcome), the prism becomes inert until you complete daily preparations.\nTell: The crystal’s facets slowly spiral like an eye when active.",
+    "craftDC": 23,
+    "usage": "Held or mounted on a gauntlet (invested)",
+    "bulk": "L",
+    "value": "Unknown — needs GM ruling",
+    "lore": [
+      "Cut from a vein of mindglass found in a dreaming quarry.",
+      "Banned in three city-states; prized by interrogators and illusionists."
+    ]
   }
 
     ];
